# ChangeLog for x11-libs/gtk+
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.563 2012/02/10 02:33:04 patrick Exp $

  10 Feb 2012; Patrick Lauer <patrick@gentoo.org> gtk+-2.24.10.ebuild,
  gtk+-2.24.5-r1.ebuild, gtk+-2.24.8-r1.ebuild, gtk+-2.24.9-r1.ebuild:
  Changing python deps in preparation for 2.4 removal

*gtk+-2.24.10 (07 Feb 2012)

  07 Feb 2012; Alexandre Rostovtsev <tetromino@gentoo.org> -gtk+-2.24.9.ebuild,
  +gtk+-2.24.10.ebuild:
  Version bump; drop crash-prone 2.24.9 version. Avoid building gdk/gtk tests
  when FEATURES=-test (thanks to Rafał Mużyło).

*gtk+-2.24.9-r1 (02 Feb 2012)

  02 Feb 2012; Pacho Ramos <pacho@gentoo.org>
  +files/gtk+-2.24.9-printing-crash.patch, +gtk+-2.24.9-r1.ebuild:
  Don't crash when printing, upstream bug #543520, thanks to gringo for
  reporting.

*gtk+-2.24.9 (29 Jan 2012)

  29 Jan 2012; Pacho Ramos <pacho@gentoo.org> +gtk+-2.24.9.ebuild,
  -gtk+-2.24.4.ebuild, -gtk+-2.24.6.ebuild, -gtk+-2.24.7.ebuild,
  -gtk+-3.0.12.ebuild, -gtk+-3.2.2-r1.ebuild, -gtk+-3.2.2-r2.ebuild:
  Version bump, remove old.

  18 Jan 2012; Markus Meier <maekke@gentoo.org> gtk+-2.24.8-r1.ebuild:
  arm stable, bug #393007

  14 Jan 2012; Markus Meier <maekke@gentoo.org> gtk+-2.24.8-r1.ebuild:
  x86 stable, bug #393007

  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> gtk+-2.24.8-r1.ebuild:
  amd64 stable, bug 393007

*gtk+-3.2.3 (28 Dec 2011)

  28 Dec 2011; Alexandre Rostovtsev <tetromino@gentoo.org> -gtk+-3.2.1.ebuild,
  -gtk+-3.2.2.ebuild, +gtk+-3.2.3.ebuild:
  Version bump with assorted bugfixes. Drop old.

  20 Dec 2011; Jeroen Roovers <jer@gentoo.org> gtk+-2.24.8-r1.ebuild:
  Stable for HPPA (bug #393007).

*gtk+-3.2.2-r2 (15 Dec 2011)

  15 Dec 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gtk+-3.2.2-r2.ebuild:
  Add upstream patches to fix various crashes, including the segfault in file