@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX gtk+-1.2-locale_fix.patch 419 RMD160 a0fbf3fb111f39b7a62c3fa31a803ef2a0ee945a SHA1 569c877ff692a7694e8aca5aceae9558844ba5dd SHA256 2e3cf84902d2f318dcbf4f9ad976573295d8d984c7a860291f37f768fc7966cb
 AUX gtk+-1.2.10-as-needed.patch 19865 RMD160 17c6b5d447b2d1c56fcc89dad676156caf0d700e SHA1 1027f38d29492c6f77205fc40992d8e625da8dbe SHA256 0864194a1e2be5f1b3df91d7dceb50bbe038fbb29f24901891c22829d55d4da7
 AUX gtk+-1.2.10-automake.patch 3270 RMD160 fce6e376c7581db2a15e0e7024eb28c0712f0f8e SHA1 1ba127d50f7eddc86e07a37c819b9dd233d27926 SHA256 f36beb9303dcf08b87ffc404576c001003c1068ae0ad66fe1585a7c1f0c462d2
@@ -30,11 +33,19 @@ DIST gtk+-3.0.12.tar.xz 13104092 RMD160 c82d14e113ae287476f5887ca03b8b01b8d22e1b
 DIST gtk+-3.2.3.tar.xz 12668948 RMD160 48a19eb3df1e38c161aca6573d1f218f2552cd70 SHA1 8b95f6c65f9307a920780847e7c72bafa358eabb SHA256 e2cf20f2510ebbc7be122a1a33dd1f472a7d06aaf16b4f2a63eb048cd9141d3d
 DIST introspection.m4.bz2 1181 RMD160 3648afa820c2ee7e240083076e1452285d043084 SHA1 e5188cc387d0d17feb77684feff7ff163779912f SHA256 69a2a57b12179159420825d1d44c74108014b0864c4d63500265639cfa9151ae
 EBUILD gtk+-1.2.10-r12.ebuild 2386 RMD160 ed251a32d854304c5d9622844d07f183f14c9bd5 SHA1 93a6ec39cde941b4939c04da955475d017a6ff6f SHA256 e4874d2dd01bc266e7e0f5b691fcf4e54f6bd3a79658dcec6d5374c5910aa78b
-EBUILD gtk+-2.24.10.ebuild 7817 RMD160 13e97ad2e57dfdc6c2be963eb519e3132f93f4aa SHA1 2e7ee6fbb391827835292781957ba25c5b67db06 SHA256 a16b4682d75b4668be647cce35763f54fcbd41f95c57b8ece6e6832eebca44fb
-EBUILD gtk+-2.24.5-r1.ebuild 7811 RMD160 f59f180a0eda9ce9513e571c3b6103532222472b SHA1 20bc170f22b21e48522a7da39ce6d563a28db083 SHA256 607246b09ef9f545097214254c8726edec9019adeb607e52d9380a0d3c19f3bf
-EBUILD gtk+-2.24.8-r1.ebuild 7983 RMD160 835ba2e5a51672e373dd421306af098761a28142 SHA1 24db987266eae46035ac928181ed103dea2362fe SHA256 a780303f877830b05e21f32467becc418a7e3584441b2905911eabecc8882861
-EBUILD gtk+-2.24.9-r1.ebuild 7863 RMD160 3fbb5fbe07d8ee5d4ba3e1cf95996730020c013e SHA1 beadfd53890470186e7f479e85361c242700ab42 SHA256 c8f5a19147fea6af4ff868fa6a5c57002af7bd3d9916cca03b5f685fb83b0c9b
+EBUILD gtk+-2.24.10-r1.ebuild 7867 RMD160 c6c4c7429b4cf0f7be95b7b8956c2e6549975fba SHA1 cd6e550d7bdcd351a69a067dea05f448a7dbb8a1 SHA256 bf3a01e2cbd85400a34c26d7f183068e79bb987c220accaff33265f651c74612
+EBUILD gtk+-2.24.10.ebuild 7850 RMD160 48824eda4dd5038870a6b5355eae540f8229cee1 SHA1 4aaf9884bfdfb3ea5510c48af4283c0d113fcc58 SHA256 a6be111910f0acf4115b80d7ba6f41dc686b00bc934d9fcc5a213b7cd0a8590b
+EBUILD gtk+-2.24.5-r1.ebuild 7844 RMD160 5f20b30090c4fd52dd3ddfd925dabd54a4c5f7e1 SHA1 2bc98579dc37b8a97b00ff32300c9d6b28398bd3 SHA256 d7f5adb5d672827357d105c2367e485cca0c2bffecdac39f11abfd2799fe6731
+EBUILD gtk+-2.24.8-r1.ebuild 8016 RMD160 c48fa7358a450bfe794206e45b1d8411d6a7239e SHA1 1c20cadd7a0b899fb79066211f1ab6ecdb9c0d23 SHA256 f2ce6e4eadbadf9aac943a7f4623620af6fe653ba5d6c500df2d2de1f4f016d3
+EBUILD gtk+-2.24.9-r1.ebuild 7896 RMD160 b699c2ab445e9a48eb8c619ec46db3397da154a1 SHA1 87eede591144bb90415411f0f9061027620521d6 SHA256 a728ffdd17e21d7bfdec3e9952a1042e56637aaa5a8a947a49eac36dda875730
 EBUILD gtk+-3.0.12-r1.ebuild 6158 RMD160 d2fa789aa709cfe016e52c35c4c4eea72001b3de SHA1 71e7290bda484de1ec4f8d4b3b361c3e9eb280be SHA256 b71bfe7153b7b1d3b128a435157c59aeaea06a930ae5f9179ba27e45793462cf
 EBUILD gtk+-3.2.3.ebuild 6334 RMD160 4fcb8a54bcbdb120a8b4bc0310d532ab4fdece79 SHA1 6d878ad635f969bc12eab75ad636f72fc29a17f9 SHA256 b4b823e55d9774a92ab500043521f71452f18579b8eed2974b560ad345fa6680
-MISC ChangeLog 86251 RMD160 79757ba3dec6797cbeef5ba0e4306461b3690ce7 SHA1 a1a18bdf6f2f2ae28ea2d2cca7bc7d226d7850c7 SHA256 4e0c2f0864eb7e8d7c65b9e777cd4cc80361937246affcd26c0c0d2fd35b28a4
+MISC ChangeLog 86607 RMD160 0b8243274f7dafa3f1492dc6da3714907ee6b13b SHA1 5926ceaa68d7855da429fbb8b8b523722fb71a51 SHA256 0e1bc037d801654dd6baa7f8561f64509dc51b4137e23bf881698cc564945523
 MISC metadata.xml 798 RMD160 9c1c01af06ea6cb0d398d66eda999eba1ec6880a SHA1 13f2860e4e48abb065d70fd85b7073074624ec28 SHA256 634c27d323d01eecbcda3159df57a7cc64557e2a0087eac60e6d9e3d94acd85c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iF4EAREIAAYFAk85mC4ACgkQdjK8w9WeBnCTSAD/YW/m/oNgj4vaJ0qGQY411Yjz
+BzKv+3Bqr6xclngIcM4BALn1pAEprEwcMRpMGAJvij3HPfQ3bJ9oREKJ4XyyUOvz
+=2k+E
+-----END PGP SIGNATURE-----
